--- a/functions/screenshot/static/main.css
+++ b/functions/screenshot/static/main.css
@@ -86,6 +86,7 @@ p {
 .title.result {
   font-size: 1.5rem;
   color: #fff;
+  padding-top: 1rem;
 }
 
 .search_container {
@@ -154,8 +155,7 @@ p {
 .screenshot_container,
 .video_container {
   width: 100%;
-  padding: 2rem 0;
-  border-bottom: 1px solid #1e293b;
+  padding: 4rem 0 2rem 0;
 }
 
 .metadata_container .title,
@@ -175,7 +175,7 @@ p {
 
 .url {
   overflow: hidden;
-  padding-right: 3.5rem;
+  padding-right: 4.5rem;
 }
 
 .url p {
@@ -197,8 +197,9 @@ p {
 
 .copy {
   position: absolute;
-  right: 5px;
-  top: 5px;
+  right: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -232,6 +233,7 @@ pre {
 
 .code {
   width: 100%;
+  min-height: 10rem;
   max-height: 20rem;
   border-radius: 1rem;
   overflow: auto;
@@ -257,22 +259,39 @@ pre {
   object-fit: cover;
 }
 
-.options {
-  border-left: 2px solid #1e293b;
-  padding: 0;
-  margin: 0;
-  padding-left: 1rem;
+.option {
+  font-family: monospace;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   color: #fff;
-  list-style: none;
 }
 
-.options .option {
-  font-family: monospace;
+.option .row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
   font-size: 1rem;
-  font-weight: bold;
+  gap: 1rem;
+  align-items: flex-start;
+  padding: 1rem 0;
+  border-bottom: 1px solid #0f172a;
+}
+
+.option .row.header {
+  font-weight: 600;
+  font-size: 1.5rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #1e293b;
+}
+
+.option .row > * {
+  width: 33%;
+  flex: none;
+}
+
+.option .row div > * {
+  display: inline;
 }
 
 .pill {
